src/test/ui/issues/issue-15783.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-15783.rs:8:15
   |
LL |     let msg = foo(x);
   |               ^^^^-^
   |                   |
   |                   expected `Option<&[&str]>`, found `Option<&[&str; 1]>`
   |
note: function defined here
  --> $DIR/issue-15783.rs:1:8
   |
LL | pub fn foo(params: Option<&[&str]>) -> usize {
   |        ^^^ -----------------------
help: provide an argument of the correct type
   |
LL |     let msg = foo({Option<&[&str]>});
   |               ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
